webpage is responsive on major mobile devices

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!-- styles -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -30,8 +35,8 @@
             COMING <br>SOON
         </h1>
 
-        <p class="msg">Hello fellow shoppers! We're currently building our new<br>
-            fashion store. Add your email below to stay up-to-date with<br>
+        <p class="msg">Hello fellow shoppers! We're currently building our new
+            fashion store. Add your email below to stay up-to-date with
             announcements and our launch deals.
         </p>
 
