Fixed responsiveness for tablets and all other mobile devices

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 <body>
 
+    
+
     <img src="images/logo.svg" alt="brand-logo" class="brand-logo-mobile">
 
     <div>
@@ -42,11 +44,13 @@
 
         <forms>
             <input type="text" placeholder="Email Address">
-            <span class="btn"><strong>></strong></span>
+            <img src="images/icon-error.svg" alt="error-icon" class="error">
+            <img src="images/icon-arrow.svg" class="btn">
             <!-- <button class="submit-btn">></button> -->
         </forms>
 
     </div>
+
 
     <!-- javascript-->
     <script src="app/js/main.js"></script>
