--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 </head>
 <body>
 
-    
-
     <img src="images/logo.svg" alt="brand-logo" class="brand-logo-mobile">
 
     <div>
@@ -42,15 +40,14 @@
             announcements and our launch deals.
         </p>
 
-        <forms>
-            <input type="text" placeholder="Email Address">
-            <img src="images/icon-error.svg" alt="error-icon" class="error">
-            <img src="images/icon-arrow.svg" class="btn">
+        <forms method="post">
+            <input type="text" placeholder="Email Address" class="email" id="email">
+            <img src="images/icon-error.svg" alt="error-icon" class="error" id="error">
+            <img src="images/icon-arrow.svg" class="btn" id="btn">
             <!-- <button class="submit-btn">></button> -->
         </forms>
 
     </div>
-
 
     <!-- javascript-->
     <script src="app/js/main.js"></script>
