aalt text for images added

--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
-
 </head>
+
 <body>
 
     <img src="images/logo.svg" alt="brand-logo" class="brand-logo-mobile">
 
-    <div>
-        <img src="images/hero-desktop.jpg" alt="pretty-model-in-peach" class="hero-img hero-desktop">
-    </div>
-
-    <div>
-        <img src="images/hero-mobile.jpg" class="hero-mobile">
-    </div>
+    <img src="images/hero-desktop.jpg" alt="pretty-model-in-peach" class="hero-img hero-desktop">
+    
+    <img src="images/hero-mobile.jpg" alt="pretty-model-in-peach" class="hero-mobile">
+    
 
     <div class="text-content">
 
@@ -39,10 +36,10 @@
             announcements and our launch deals.
         </p>
 
-        <forms method="post">
+        <forms>
             <input type="text" placeholder="Email Address" class="email" id="email">
             <img src="images/icon-error.svg" alt="error-icon" class="error" id="error">
-            <img src="images/icon-arrow.svg" class="btn" id="btn">
+            <img src="images/icon-arrow.svg" alt="arrow-icon" class="btn" id="btn">
         </forms>
 
     </div>
